2004-02-04  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstevent.c: (_gst_event_free):
	  actually break; inside the switch statement
	* gst/parse/grammar.y:
	  fix memleak where GValues weren't unset

2004-02-03  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gststructure.c: (gst_structure_from_string):
	  fix huge memleak
	* gst/elements/gsttypefind.c: (gst_type_find_element_have_type),
	(new_entry), (gst_type_find_element_chain):
	* gst/gstelement.c: (gst_element_base_class_init),
	(gst_element_class_set_details):
	* gst/gstpad.c: (gst_pad_can_link_filtered):
	  fix smaller memleaks
	* gst/gstpad.c: (gst_real_pad_dispose):
	  check that explicit caps are gone
	* gst/gststructure.c: (gst_structure_free):
	  actually free the structure
	* gst/gstelement.c: (gst_element_clear_pad_caps):
	  unset explicit caps

2004-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tools/Makefile.am:
	  use AM_CFLAGS since all the CFLAGS are the same
	  use AM_LDFAGS

2004-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/manual/gnome.xml:
          expand example a little
	* gst/gst.c: (gst_init_with_popt_table),
	(gst_init_check_with_popt_table), (init_pre), (init_popt_callback):
          make sure popt option displays are done with right textdomain
          use GstPoptOption type
	* gst/gst.h:
          create GstPoptOption type

2004-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gsterror.c: (_gst_stream_errors_init):
	* gst/gsterror.h:
          adding error type for no codec
	* po/POTFILES.in:
          add gst-inspect
	* po/nl.po:
          update dutch translation
	* tools/gst-inspect.c: (print_element_list), (main):
          do proper internationalization
	* tools/gst-launch.c: (idle_func):
          remove commented out function call

2004-02-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/README:
          add some error fixing notes
	* docs/gst/gstreamer-sections.txt: